<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?attr/hintTextAppearance"
                android:id="@+id/hintAnimationNome"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_nome"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_nome"
                    android:inputType="textPersonName|textCapWords"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?attr/hintTextAppearance"
                android:id="@+id/hintAnimationCNPJ"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/et_cpf"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_cnpj"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?attr/hintTextAppearance"
                android:id="@+id/hintAnimationPhone"
                >
                <EditText
                    android:id="@+id/et_telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_telefone"
                    android:inputType="phone"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="?attr/hintTextAppearance"
                android:id="@+id/hintAnimationEmail"
                >
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="20dp"
                    android:id="@+id/et_email"
                    android:hint="@string/hint_e_mail"/>
            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_marginRight="8dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="?attr/hintTextAppearance"
                    android:id="@+id/hintAnimationRua"
                    android:layout_marginEnd="8dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textCapWords"
                        android:layout_marginTop="20dp"
                        android:id="@+id/et_rua"
                        android:hint="@string/endereço"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="?attr/hintTextAppearance"
                    android:id="@+id/hintAnimationNumero"
                    android:layout_marginStart="8dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_marginTop="20dp"
                        android:id="@+id/et_numero"
                        android:hint="@string/numero"/>
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/button_fab"/>

</android.support.design.widget.CoordinatorLayout>